# Agentic_AI_Internship

./: .gitignore  README.md  agent_tools.py  agentic_ai_internship_curriculum.docx  index.html  main.py  pyproject.toml
project/: pyproject.toml
project/challenge_generator/: agent.py  main.py  pyproject.toml  server.py
project/challenge_generator/.adk/: session.db
tasks/Gemy/: pyproject.toml
tasks/Gemy/challenge_generator/: agent.py  server.py
tasks/Gemy/challenge_generator/.adk/: session.db
tasks/Jannah/project/: pyproject.toml
tasks/Jannah/project/Challenge/: agent.py
tasks/Julie/: main.py  pyproject.toml
tasks/Julie/challenge_generator/: agent.py
tasks/Julie/challenge_generator/.adk/: session.db
tasks/Mahmoud/: README.md  pyproject.toml
tasks/Mahmoud/test/: agent.py
tasks/Mazen/challenge/: agent.py
tasks/Mazen/current_time/: pyproject.toml
tasks/Mazen/current_time/my_agent/: agent.py
tasks/Mohamed_Ashraf/challenge_generator/: agent.py  pyproject.toml  server.py
tasks/Mohamed_Ashraf/challenge_generator/.adk/: session.db
tasks/Nour/Sessions/Challenger/: agent.py
tasks/Omar/: main.py  pyproject.toml
tasks/Omar/Challenges/Challenge_1/: pyproject.toml
tasks/Omar/Challenges/Challenge_1/challenge_generator/: agent.py
tasks/Omar/Challenges/Challenge_1/challenge_generator/.adk/: session.db
tasks/Omar/Challenges/Challenge_2/agent_2/.adk/: session.db
tasks/Omar/Exercises/Exercise_2/Agent_2/: agent.py
tasks/Omar/Exercises/Exercise_2/Agent_2/.adk/: session.db
