[project]
name = "omar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "exa-py>=2.16.0",
    "google-adk>=2.5.0",
    "groq>=1.5.0",
    "litellm>=1.93.0",
    "orjson>=3.11.9",
    "phi>=0.6.7",
    "redis>=8.0.1",
]
